--- a/GUI/package.json
+++ b/GUI/package.json
@@ -4,9 +4,10 @@
   "description": "PACMAN GAME",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "node server",
+    "electron": "node server & electron .",
+    "electron:windows": "electron-builder build --windows"
   },
-  "repository": "https://github.com/electron/electron-quick-start",
   "keywords": [],
   "author": "",
   "license": "",
@@ -14,6 +15,9 @@
     "electron": "^9.0.3"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
+    "electron-builder": "^22.7.0",
+    "express": "^4.17.1",
     "url": "^0.11.0"
   }
 }
