--- a/GUI/package.json
+++ b/GUI/package.json
@@ -15,9 +15,13 @@
     "electron": "^9.0.3"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "electron-builder": "^22.7.0",
     "express": "^4.17.1",
+    "firebase": "^7.15.3",
+    "ip": "^1.1.5",
+    "request": "^2.88.2",
     "url": "^0.11.0"
   }
 }
